--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>color changing game</h2>
-    <button>click me to change color</button>
-    <div>
-        this is a new color
-    </div>
 
-
-    <input placeholder="type something"><button>submit</button>
+    <h1>get random cat facts</h1>
+    <button>Show Facts</button>
+    <p id="result"></p>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 </body>
 </html>
